@@ -1,4 +1,4 @@
-DIST anyremote-4.14.tar.gz 1080071 RMD160 7106fce88af457e0def7525b92b6ff3403efc87a SHA1 6c3891835b2017eb2434b4be19acf65e35d1ecdd SHA256 2071b853143bd1f11313c7bbe74267bffd01708fd9c17f22f9b7b4d996e19e7d
-EBUILD anyremote-4.14.ebuild 822 RMD160 71cadc258d2692cdf9c3c5349e599aade58ef33e SHA1 b9f9388e4903def64891d8ea0d45ac8dc9d857cf SHA256 07453b1451e2d0f2a5446a38f0b91c5137e594016d678c4ad28dd7a1f9d20a79
-MISC ChangeLog 1568 RMD160 9aa71e6e57f2a81fe5de426d3522d62aca9e7ee1 SHA1 22b2898164a018635d18ce65b6774dd90b75c51e SHA256 58c036caf20c04639165f6f5d0c60963405061b5a59e3f04607011f837b2a6d4
+DIST anyremote-4.15.tar.gz 1080535 RMD160 baaba38fc41dcfbdd5c8f92f9b1c2a29578d4ac6 SHA1 26f7e754e0b606fe27b0f29ef1911b89fa195edb SHA256 90818e407177b1b78253727b1bca030ca20447fc1f296b36f0e0f99361e86f8e
+EBUILD anyremote-4.15.ebuild 805 RMD160 7dcc53cdec1b920e78c22ac03f62ed56dda9dcf3 SHA1 c8c1df394e6d3cdc8a368a53faff5d0b2bcd0a4b SHA256 92b83cc11d9e3f194b50a2627090d8855646b28d2c56ec5382ba89c160d6182e
+MISC ChangeLog 1763 RMD160 4cef95fd21e1fea32cdac04dbe1768212b747fa9 SHA1 b76a063a8067c84d0353b1f70db0b0aa2df301fd SHA256 da74ebec5005fe3ec74832be5cc31767730e407e755c37cfc6ed6a2ad120a788
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
